engine/core/imgui/imgui.h

struct ImGuiViewport;               
struct ImGuiWindowClass;            
typedef int ImGuiCond;              
typedef int ImGuiMouseButton;       
typedef int ImGuiDockNodeFlags;     
typedef int ImGuiDragDropFlags;     
typedef int ImGuiPopupFlags;        
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiViewportFlags;     
typedef int ImGuiWindowFlags;       
typedef unsigned int ImGuiID;       
struct ImVec2
{
    float                                   x, y;
    ImVec2()                                { x = y = 0.0f; }
    ImVec2(float _x, float _y)              { x = _x; y = _y; }
    float  operator[] (size_t idx) const    { IM_ASSERT(idx <= 1); return (&x)[idx]; }    
    float& operator[] (size_t idx)          { IM_ASSERT(idx <= 1); return (&x)[idx]; }    
#ifdef IM_VEC2_CLASS_EXTRA
    IM_VEC2_CLASS_EXTRA     
#endif
};
    IMGUI_API bool          Combo(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items = -1);
    IMGUI_API bool          ListBox(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items = -1);
    IMGUI_API void          PlotLines(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0));
    IMGUI_API void          PlotHistogram(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0));
    IMGUI_API bool          MenuItem(const char* label, const char* shortcut = NULL, bool selected = false, bool enabled = true);  
    IMGUI_API bool          MenuItem(const char* label, const char* shortcut, bool* p_selected, bool enabled = true);              
    IMGUI_API void          BeginTooltip();                                                     
    IMGUI_API void          EndTooltip();
    IMGUI_API void          SetTooltip(const char* fmt, ...) IM_FMTARGS(1);                     
    IMGUI_API void          SetTooltipV(const char* fmt, va_list args) IM_FMTLIST(1);
    IMGUI_API bool          BeginPopup(const char* str_id, ImGuiWindowFlags flags = 0);                         
    IMGUI_API bool          BeginPopupModal(const char* name, bool* p_open = NULL, ImGuiWindowFlags flags = 0); 
    IMGUI_API void          EndPopup();                                                                         
    IMGUI_API void          OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags = 0);                     
    IMGUI_API bool          OpenPopupContextItem(const char* str_id = NULL, ImGuiPopupFlags popup_flags = 1);   
    IMGUI_API void          CloseCurrentPopup();                                                                
    IMGUI_API bool          BeginPopupContextItem(const char* str_id = NULL, ImGuiPopupFlags popup_flags = 1);  
    IMGUI_API bool          BeginPopupContextWindow(const char* str_id = NULL, ImGuiPopupFlags popup_flags = 1);
    IMGUI_API bool          BeginPopupContextVoid(const char* str_id = NULL, ImGuiPopupFlags popup_flags = 1);  
    IMGUI_API bool          IsPopupOpen(const char* str_id, ImGuiPopupFlags flags = 0);                         
    IMGUI_API void          Columns(int count = 1, const char* id = NULL, bool border = true);
    IMGUI_API void          NextColumn();                                                       
    IMGUI_API int           GetColumnIndex();                                                   
    IMGUI_API float         GetColumnWidth(int column_index = -1);                              
    IMGUI_API void          SetColumnWidth(int column_index, float width);                      
    IMGUI_API float         GetColumnOffset(int column_index = -1);                             
    IMGUI_API void          SetColumnOffset(int column_index, float offset_x);                  
    IMGUI_API int           GetColumnsCount();
    IMGUI_API bool          BeginTabBar(const char* str_id, ImGuiTabBarFlags flags = 0);        
    IMGUI_API void          EndTabBar();                                                        
    IMGUI_API bool          BeginTabItem(const char* label, bool* p_open = NULL, ImGuiTabItemFlags flags = 0);
    IMGUI_API void          EndTabItem();                                                       
    IMGUI_API void          SetTabItemClosed(const char* tab_or_docked_window_label);           
    IMGUI_API void          DockSpace(ImGuiID id, const ImVec2& size = ImVec2(0, 0), ImGuiDockNodeFlags flags = 0, const ImGuiWindowClass* window_class = NULL);
    IMGUI_API ImGuiID       DockSpaceOverViewport(ImGuiViewport* viewport = NULL, ImGuiDockNodeFlags flags = 0, const ImGuiWindowClass* window_class = NULL);
    IMGUI_API void          SetNextWindowDockID(ImGuiID dock_id, ImGuiCond cond = 0);           
    IMGUI_API void          SetNextWindowClass(const ImGuiWindowClass* window_class);           
    IMGUI_API ImGuiID       GetWindowDockID();
    IMGUI_API bool          IsWindowDocked();                                                   
    IMGUI_API void          LogToTTY(int auto_open_depth = -1);                                 
    IMGUI_API void          LogToFile(int auto_open_depth = -1, const char* filename = NULL);   
    IMGUI_API void          LogToClipboard(int auto_open_depth = -1);                           
    IMGUI_API void          LogFinish();                                                        
    IMGUI_API void          LogButtons();                                                       
    IMGUI_API void          LogText(const char* fmt, ...) IM_FMTARGS(1);                        
    IMGUI_API bool          BeginDragDropSource(ImGuiDragDropFlags flags = 0);                                      
    IMGUI_API bool          SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond = 0);  
    IMGUI_API void          EndDragDropSource();                                                                    
    IMGUI_API void          SetAllocatorFunctions(void* (*alloc_func)(size_t sz, void* user_data), void (*free_func)(void* ptr, void* user_data), void* user_data = NULL);
enum ImGuiPopupFlags_
{
    ImGuiPopupFlags_None                    = 0,
    ImGuiPopupFlags_MouseButtonLeft         = 0,        
    ImGuiPopupFlags_MouseButtonRight        = 1,        
    ImGuiPopupFlags_MouseButtonMiddle       = 2,        
    ImGuiPopupFlags_MouseButtonMask_        = 0x1F,
    ImGuiPopupFlags_MouseButtonDefault_     = 1,
    ImGuiPopupFlags_NoOpenOverExistingPopup = 1 << 5,   
    ImGuiPopupFlags_NoOpenOverItems         = 1 << 6,   
    ImGuiPopupFlags_AnyPopupId              = 1 << 7,   
    ImGuiPopupFlags_AnyPopupLevel           = 1 << 8,   
    ImGuiPopupFlags_AnyPopup                = ImGuiPopupFlags_AnyPopupId | ImGuiPopupFlags_AnyPopupLevel
};
struct ImGuiWindowClass
{
    ImGuiID             ClassId;                    
    ImGuiID             ParentViewportId;           
    ImGuiViewportFlags  ViewportFlagsOverrideSet;   
    ImGuiViewportFlags  ViewportFlagsOverrideClear; 
    ImGuiDockNodeFlags  DockNodeFlagsOverrideSet;   
    ImGuiDockNodeFlags  DockNodeFlagsOverrideClear; 
    bool                DockingAlwaysTabBar;        
    bool                DockingAllowUnclassed;      
    ImGuiWindowClass() { ClassId = 0; ParentViewportId = 0; ViewportFlagsOverrideSet = ViewportFlagsOverrideClear = 0x00; DockNodeFlagsOverrideSet = DockNodeFlagsOverrideClear = 0x00; DockingAlwaysTabBar = false; DockingAllowUnclassed = true; }
};
    static inline bool  BeginPopupContextWindow(const char* str_id, ImGuiMouseButton mb, bool over_items) { return BeginPopupContextWindow(str_id, mb | (over_items ? 0 : ImGuiPopupFlags_NoOpenOverItems)); }
struct ImGuiViewport
{
    ImGuiID             ID;                     
    ImGuiViewportFlags  Flags;                  
    ImVec2              Pos;                    
    ImVec2              Size;                   
    ImVec2              WorkOffsetMin;          
    ImVec2              WorkOffsetMax;          
    float               DpiScale;               
    ImDrawData*         DrawData;               
    ImGuiID             ParentViewportId;       
    void*               RendererUserData;       
    void*               PlatformUserData;       
    void*               PlatformHandle;         
    void*               PlatformHandleRaw;      
    bool                PlatformRequestMove;    
    bool                PlatformRequestResize;  
    bool                PlatformRequestClose;   
    ImGuiViewport()     { ID = 0; Flags = 0; DpiScale = 0.0f; DrawData = NULL; ParentViewportId = 0; RendererUserData = PlatformUserData = PlatformHandle = PlatformHandleRaw = NULL; PlatformRequestMove = PlatformRequestResize = PlatformRequestClose = false; }
    ~ImGuiViewport()    { IM_ASSERT(PlatformUserData == NULL && RendererUserData == NULL); }
    ImVec2              GetCenter()             { return ImVec2(Pos.x + Size.x * 0.5f, Pos.y + Size.y * 0.5f); }
    ImVec2              GetWorkPos()            { return ImVec2(Pos.x + WorkOffsetMin.x, Pos.y + WorkOffsetMin.y); }
    ImVec2              GetWorkSize()           { return ImVec2(Size.x - WorkOffsetMin.x + WorkOffsetMax.x, Size.y - WorkOffsetMin.y + WorkOffsetMax.y); } 
};