engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:596
        [DllImport(Engine.Paths.Exe, EntryPoint = "?MenuItem@ImGui@@YA_NPEBD0_N1@Z")]
        public static extern bool MenuItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string shortcut,
            bool selected,
            bool enabled
        );
        // overload
        public static bool MenuItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string shortcut = default,
            bool selected = default
        )
        {
            return MenuItem(label, shortcut, selected, true);
        }

        // ../../imgui/imgui.h:597
        [DllImport(Engine.Paths.Exe, EntryPoint = "?MenuItem@ImGui@@YA_NPEBD0PEA_N_N@Z")]
        public static extern bool MenuItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string shortcut,
            ref bool p_selected,
            bool enabled
        );
        // overload
        public static bool MenuItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string shortcut,
            ref bool p_selected
        )
        {
            return MenuItem(label, shortcut, ref p_selected, true);
        }

        // ../../imgui/imgui.h:601
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginTooltip@ImGui@@YAXXZ")]
        public static extern void BeginTooltip(
        );

        // ../../imgui/imgui.h:602
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndTooltip@ImGui@@YAXXZ")]
        public static extern void EndTooltip(
        );

        // ../../imgui/imgui.h:603
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetTooltip@ImGui@@YAXPEBDZZ")]
        public static extern void SetTooltip(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:604
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetTooltipV@ImGui@@YAXPEBDPEAD@Z")]
        public static extern void SetTooltipV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:617
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginPopup@ImGui@@YA_NPEBDH@Z")]
        public static extern bool BeginPopup(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int flags = default
        );

        // ../../imgui/imgui.h:618
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginPopupModal@ImGui@@YA_NPEBDPEA_NH@Z")]
        public static extern bool BeginPopupModal(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string name,
            IntPtr p_open = default,
            int flags = default
        );

        // ../../imgui/imgui.h:619
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndPopup@ImGui@@YAXXZ")]
        public static extern void EndPopup(
        );

        // ../../imgui/imgui.h:626
        [DllImport(Engine.Paths.Exe, EntryPoint = "?OpenPopup@ImGui@@YAXPEBDH@Z")]
        public static extern void OpenPopup(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int popup_flags = default
        );

        // ../../imgui/imgui.h:627
        [DllImport(Engine.Paths.Exe, EntryPoint = "?OpenPopupContextItem@ImGui@@YA_NPEBDH@Z")]
        public static extern bool OpenPopupContextItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id = default,
            int popup_flags = 1
        );

        // ../../imgui/imgui.h:628
        [DllImport(Engine.Paths.Exe, EntryPoint = "?CloseCurrentPopup@ImGui@@YAXXZ")]
        public static extern void CloseCurrentPopup(
        );

        // ../../imgui/imgui.h:634
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginPopupContextItem@ImGui@@YA_NPEBDH@Z")]
        public static extern bool BeginPopupContextItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id = default,
            int popup_flags = 1
        );

        // ../../imgui/imgui.h:635
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginPopupContextWindow@ImGui@@YA_NPEBDH@Z")]
        public static extern bool BeginPopupContextWindow(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id = default,
            int popup_flags = 1
        );

        // ../../imgui/imgui.h:636
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginPopupContextVoid@ImGui@@YA_NPEBDH@Z")]
        public static extern bool BeginPopupContextVoid(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id = default,
            int popup_flags = 1
        );

        // ../../imgui/imgui.h:641
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsPopupOpen@ImGui@@YA_NPEBDH@Z")]
        public static extern bool IsPopupOpen(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int flags = default
        );

        // ../../imgui/imgui.h:648
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Columns@ImGui@@YAXHPEBD_N@Z")]
        public static extern void Columns(
            int count,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string id,
            bool border
        );
        // overload
        public static void Columns(
            int count = 1,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string id = default
        )
        {
            Columns(count, id, true);
        }

        // ../../imgui/imgui.h:649
        [DllImport(Engine.Paths.Exe, EntryPoint = "?NextColumn@ImGui@@YAXXZ")]
        public static extern void NextColumn(
        );

        // ../../imgui/imgui.h:650
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetColumnIndex@ImGui@@YAHXZ")]
        public static extern int GetColumnIndex(
        );

        // ../../imgui/imgui.h:651
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetColumnWidth@ImGui@@YAMH@Z")]
        public static extern float GetColumnWidth(
            int column_index = -1
        );

        // ../../imgui/imgui.h:652
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetColumnWidth@ImGui@@YAXHM@Z")]
        public static extern void SetColumnWidth(
            int column_index,
            float width
        );

        // ../../imgui/imgui.h:653
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetColumnOffset@ImGui@@YAMH@Z")]
        public static extern float GetColumnOffset(
            int column_index = -1
        );

        // ../../imgui/imgui.h:654
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetColumnOffset@ImGui@@YAXHM@Z")]
        public static extern void SetColumnOffset(
            int column_index,
            float offset_x
        );

        // ../../imgui/imgui.h:655
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetColumnsCount@ImGui@@YAHXZ")]
        public static extern int GetColumnsCount(
        );

        // ../../imgui/imgui.h:659
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginTabBar@ImGui@@YA_NPEBDH@Z")]
        public static extern bool BeginTabBar(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int flags = default
        );

        // ../../imgui/imgui.h:660
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndTabBar@ImGui@@YAXXZ")]
        public static extern void EndTabBar(
        );

        // ../../imgui/imgui.h:661
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginTabItem@ImGui@@YA_NPEBDPEA_NH@Z")]
        public static extern bool BeginTabItem(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr p_open = default,
            int flags = default
        );

        // ../../imgui/imgui.h:662
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndTabItem@ImGui@@YAXXZ")]
        public static extern void EndTabItem(
        );

        // ../../imgui/imgui.h:663
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetTabItemClosed@ImGui@@YAXPEBD@Z")]
        public static extern void SetTabItemClosed(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string tab_or_docked_window_label
        );

        // ../../imgui/imgui.h:673
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DockSpace@ImGui@@YAXIAEBUImVec2@@HPEBUImGuiWindowClass@@@Z")]
        public static extern void DockSpace(
            uint id,
            in Vector2 size = default,
            int flags = default,
            in ImGuiWindowClass window_class = default
        );

        // ../../imgui/imgui.h:674
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DockSpaceOverViewport@ImGui@@YAIPEAUImGuiViewport@@HPEBUImGuiWindowClass@@@Z")]
        public static extern uint DockSpaceOverViewport(
            IntPtr viewport = default,
            int flags = default,
            in ImGuiWindowClass window_class = default
        );

        // ../../imgui/imgui.h:675
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetNextWindowDockID@ImGui@@YAXIH@Z")]
        public static extern void SetNextWindowDockID(
            uint dock_id,
            int cond = default
        );

        // ../../imgui/imgui.h:676
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetNextWindowClass@ImGui@@YAXPEBUImGuiWindowClass@@@Z")]
        public static extern void SetNextWindowClass(
            in ImGuiWindowClass window_class
        );

        // ../../imgui/imgui.h:677
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetWindowDockID@ImGui@@YAIXZ")]
        public static extern uint GetWindowDockID(
        );

        // ../../imgui/imgui.h:678
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsWindowDocked@ImGui@@YA_NXZ")]
        public static extern bool IsWindowDocked(
        );

        // ../../imgui/imgui.h:682
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LogToTTY@ImGui@@YAXH@Z")]
        public static extern void LogToTTY(
            int auto_open_depth = -1
        );

        // ../../imgui/imgui.h:683
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LogToFile@ImGui@@YAXHPEBD@Z")]
        public static extern void LogToFile(
            int auto_open_depth = -1,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string filename = default
        );

        // ../../imgui/imgui.h:684
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LogToClipboard@ImGui@@YAXH@Z")]
        public static extern void LogToClipboard(
            int auto_open_depth = -1
        );

        // ../../imgui/imgui.h:685
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LogFinish@ImGui@@YAXXZ")]
        public static extern void LogFinish(
        );

        // ../../imgui/imgui.h:686
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LogButtons@ImGui@@YAXXZ")]
        public static extern void LogButtons(
        );

        // ../../imgui/imgui.h:687
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LogText@ImGui@@YAXPEBDZZ")]
        public static extern void LogText(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:692
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginDragDropSource@ImGui@@YA_NH@Z")]
        public static extern bool BeginDragDropSource(
            int flags = default
        );

        // ../../imgui/imgui.h:693
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetDragDropPayload@ImGui@@YA_NPEBDPEBX_KH@Z")]
        public static extern bool SetDragDropPayload(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string type,
            IntPtr data,
            ulong sz,
            int cond = default
        );

        // ../../imgui/imgui.h:694
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndDragDropSource@ImGui@@YAXXZ")]
        public static extern void EndDragDropSource(
        );
